Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-20372

thread_pool_info fails randomly in 10.5

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.5(EOL)
    • N/A
    • N/A
    • None

    Description

      https://buildbot.askmonty.org/buildbot/reports/cross_reference with test "thread_pool_info" shows a lot of failures, mostly in 10.5

      Example:
      https://buildbot.askmonty.org/buildbot/builders/kvm-deb-bionic-amd64/builds/2721

      main.thread_pool_info w1 [ fail ]
      Test ended at 2019-08-16 10:29:34

      CURRENT_TEST: main.thread_pool_info
      — /usr/share/mysql/mysql-test/main/thread_pool_info.result 2019-08-16 07:40:14.000000000 -0400
      +++ /dev/shm/var/1/log/thread_pool_info.reject 2019-08-16 10:29:34.265336935 -0400
      @@ -55,7 +55,7 @@
      FLUSH THREAD_POOL_STATS;
      SELECT SUM(DEQUEUES_BY_LISTENER+DEQUEUES_BY_WORKER) FROM INFORMATION_SCHEMA.THREAD_POOL_STATS;
      SUM(DEQUEUES_BY_LISTENER+DEQUEUES_BY_WORKER)
      -1
      +0
      SELECT SUM(POLLS_BY_LISTENER+POLLS_BY_WORKER) FROM INFORMATION_SCHEMA.THREAD_POOL_STATS;
      SUM(POLLS_BY_LISTENER+POLLS_BY_WORKER)
      2

      Attachments

        Activity

          People

            wlad Vladislav Vaintroub
            monty Michael Widenius
            Votes:
            1 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.