MDEV-20372 thread_pool_info fails randomly in 10.5

Rework stats a bit, so we're not missing any queue_get() now.

Don't do stats_reset_table(), if generic threadpool is off.